--- a/settingGame.ui
+++ b/settingGame.ui
@@ -269,7 +269,7 @@
      </font>
     </property>
     <property name="text">
-     <string>назад</string>
+     <string>Назад</string>
     </property>
    </widget>
   </widget>
