--- a/rate.ui
+++ b/rate.ui
@@ -11,14 +11,14 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Рейтинг</string>
+   <string>История игр</string>
   </property>
   <property name="windowIcon">
    <iconset>
     <normaloff>icon.png</normaloff>icon.png</iconset>
   </property>
   <property name="statusTip">
-   <string>Рейтинг игроков</string>
+   <string/>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QTableWidget" name="tableWidget">
@@ -34,8 +34,8 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>170</x>
-      <y>40</y>
+      <x>270</x>
+      <y>30</y>
       <width>451</width>
       <height>51</height>
      </rect>
@@ -64,23 +64,7 @@
      </font>
     </property>
     <property name="text">
-     <string>назад</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_2">
-    <property name="geometry">
-     <rect>
-      <x>570</x>
-      <y>20</y>
-      <width>221</width>
-      <height>161</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-    <property name="pixmap">
-     <pixmap>pedestal.jpg</pixmap>
+     <string>Назад</string>
     </property>
    </widget>
   </widget>
