--- a/profileWin.ui
+++ b/profileWin.ui
@@ -108,8 +108,8 @@
    <widget class="QLabel" name="Bal">
     <property name="geometry">
      <rect>
-      <x>30</x>
-      <y>150</y>
+      <x>70</x>
+      <y>120</y>
       <width>61</width>
       <height>31</height>
      </rect>
@@ -134,6 +134,42 @@
     </property>
     <property name="text">
      <string>Загрузить аватарку</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_2">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>150</y>
+      <width>91</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>11</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Ваш ID:</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="id">
+    <property name="geometry">
+     <rect>
+      <x>70</x>
+      <y>150</y>
+      <width>61</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>10</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string/>
     </property>
    </widget>
   </widget>
